<resources>
    <string name="app_name">Re-Cuento</string>
    <string name="version_app">Versión 1.0.0 - PROD</string>
    <string name="copyright_app">© 2022 - DANE, Colombia</string>
    <string-array name="direccion_previa">
        <item>Seleccione...</item>
        <item>1. Dirección antes de placa.</item>
        <item>2. Dirección antes de complemento.</item>
        <item>3. Dirección hasta complemento.</item>
        <item>4. Sin dirección previa.</item>
    </string-array>
    <string-array name="direccion_previa_no_estandar">
        <item>Seleccione...</item>
        <item>3. Dirección hasta complemento.</item>
        <item>4. Sin dirección previa.</item>
    </string-array>
    <string-array name="direccion_previa2">
        <item>Seleccione...</item>
        <item>1. Dirección antes de placa.</item>
        <item>2. Dirección antes de complemento.</item>
        <item>3. Dirección hasta complemento.</item>
    </string-array>
    <string-array name="direccion_tipo">
        <item>Seleccione...</item>
        <item>1. Estándar</item>
        <item>2. No estándar</item>
        <item>3. Sin vía</item>
    </string-array>
    <string-array name="Novedades_cartograficas">
        <item>Seleccione...</item>
        <item>1. Ninguna</item>
        <item>2. División</item>
        <item>3. Nueva</item>
        <item>4. Unión</item>
    </string-array>
    <string-array name="DIREC_VP">
        <item>Seleccione...</item>
        <item>(CL) Calle</item>
        <item>(KR) Carrera</item>
        <item>(DG) Diagonal</item>
        <item>(TV) Transversal</item>
        <item>(AC) Avenida Calle</item>
        <item>(AK) Avenida Carrera</item>
        <item>(AU) Autopista</item>
        <item>(AV) Avenida</item>
        <item>(CQ) Circular</item>
        <item>(CV) Circunvalar</item>
        <item>(BL) Boulevard</item>
        <item>(CAM) Camino</item>
        <item>(CT) Carretera</item>
        <item>(PRJ) Paraje</item>
        <item> (PJ) Pasaje</item>
        <item>(PS) Paseo</item>
        <item>(TC) Troncal</item>
        <item>(VT) Variante</item>
        <item>(NA) Sin Vía principal</item>
    </string-array>
    <string-array name="sufijo">
        <item>Seleccione...</item>
        <item>1. BIS</item>
        <item>2. Sin sufijo</item>
    </string-array>
    <string-array name="cuadrante">
        <item>Seleccione...</item>
        <item>1.  Sin Cuadrante</item>
        <item>E.  ESTE</item>
        <item>N.  NORTE</item>
        <item>W.  OESTE</item>
        <item>S.  SUR</item>
    </string-array>
    <string-array name="complemento">

        <item>(ALM) Almacén</item>
        <item>(BG) Bodega</item>
        <item>(OF) Oficina</item>
        <item>(OS) Oficina Sótano</item>
        <item>(LC) Local</item>
        <item>(LM) Local Mezzanine</item>
        <item>(LS) Local Sótano</item>
        <item>(CC) Centro Comercial</item>
        <item>(CN) Consultorio</item>
        <item>(DP) Depósito</item>
        <item>(DS) Deposito Sótano</item>
        <item>(AD) Administración</item>
        <item>(AE) Aeropuerto</item>
        <item>(AGN) Agencia</item>
        <item>(AG) Agrupación</item>
        <item>(AL) Altillo</item>
        <item>(APTDO) Apartado</item>
        <item>(AP) Apartamento</item>
        <item>(AS) Apartamento Sótano</item>
        <item>(ASN) Asentamiento</item>
        <item>(BR) Barrio</item>
        <item>(BQ) Bloque</item>
        <item>(CA) Casa</item>
        <item>(CAS) Caserío</item>
        <item>(CU) Célula</item>
        <item>(CD) Ciudadela</item>
        <item>(CM) Condominio</item>
        <item>(CO) Conjunto</item>
        <item>(CO) Conjunto Residencial</item>
        <item>(CNT) Contador</item>
        <item>(CRG) Corregimiento</item>
        <item>(QT) Cuarto</item>
        <item>(CUC) Cuentas Corridas</item>
        <item>(DPTO) Departamento</item>
        <item>(DA) Descripción Adicional</item>
        <item>(ED) Edificio</item>
        <item>(EN) Entrada</item>
        <item>(EQ) Esquina</item>
        <item>(ES) Estación</item>
        <item>(ET) Etapa</item>
        <item>(EX) Exterior</item>
        <item>(FFC) Ferrocarril</item>
        <item>(FI) Finca</item>
        <item>(GJ) Garaje</item>
        <item>(GS) Garaje Sótano</item>
        <item>(HB) Habitación</item>
        <item>(HC) Hacienda</item>
        <item>(IN) Interior</item>
        <item>(KM) Kilómetro</item>
        <item>(LT) Lote</item>
        <item>(MZ) Manzana</item>
        <item>(MJ) Mejora</item>
        <item>(MN) Mezzanine</item>
        <item>(MD) Módulo</item>
        <item>(MPIO) Municipio</item>
        <item>(PI) Nivel</item>
        <item>(NUC) Núcleo</item>
        <item>(PAR) Parcela</item>
        <item>(PQ) Parque</item>
        <item>(PA) Parqueadero</item>
        <item>(PT) Peatonal</item>
        <item>(PH) Penthouse</item>
        <item>(PI) Piso</item>
        <item>(PLN) Plan</item>
        <item>(PL) Planta</item>
        <item>(PLZ) Plaza</item>
        <item>(PR) Portería</item>
        <item>(PD) Predio</item>
        <item>(PTE) Puente</item>
        <item>(PU) Puesto</item>
        <item>(QNT) Quinta</item>
        <item>(RSD) Residencias</item>
        <item>(RP) Round Point / Glorieta</item>
        <item>(SA) Salón</item>
        <item>(SC) Salón Comunal</item>
        <item>(SECC) Sección</item>
        <item>(SECT) Sector</item>
        <item>(SS) Semisótano</item>
        <item>(SL) Solar</item>
        <item>(ST) Sótano</item>
        <item>(SU) Suite</item>
        <item>(SM) Supermanzana</item>
        <item>(TER) Terminal</item>
        <item>(TZ) Terraza</item>
        <item>(TO) Torre</item>
        <item>(UN) Unidad</item>
        <item>(UR) Unidad Residencial</item>
        <item>(UR) Urbanización</item>
        <item>(VDA) Vereda</item>
        <item>(VIA) Vía</item>
        <item>(VD) Viaducto</item>
        <item>(ZN) Zona</item>
        <item>(ZF) Zona Franca</item>
        <item>(NA) Sin tipo complemento</item>

    </string-array>
    <string-array name="letra">
        <item>Seleccione...</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
        <item>Otros</item>
    </string-array>
    <string-array name="listado_default">
        <item>Seleccione...</item>
    </string-array>
    <string-array name="estado_unidad">
        <item>Seleccione...</item>
        <item>1. Ocupado</item>
        <item>2. Desocupado</item>
        <item>3. Obra</item>
    </string-array>
    <string-array name="unidad_observacion">
        <item>Seleccione...</item>
        <item>1. Establecimiento Fijo</item>
        <item>2. Establecimiento Semifijo</item>
        <item>3. Vendedor de Calle</item>
        <item>4. Vivienda con actividad económica visible</item>
    </string-array>
    <string-array name="unidad_observacion_1">
        <item>Seleccione...</item>
        <item>1. Establecimiento Fijo</item>
        <item>2. Establecimiento Semifijo</item>
    </string-array>
    <string-array name="unidad_observacion_2">
        <item>Seleccione...</item>
        <item>5. Obra de edificación</item>
    </string-array>
    <string-array name="tipo_vendedor">
        <item>Seleccione...</item>
        <item>1. Puesto móvil</item>
        <item>2. Sin puesto móvil</item>
    </string-array>
    <string-array name="sector_economico">
        <item>Seleccione...</item>
        <item>1. Comercio</item>
        <item>2. Industria</item>
        <item>3. Servicio</item>
        <item>4. Transporte</item>
        <item>5. Construcción</item>
    </string-array>
    <string-array name="sector_economico1">
        <item>Seleccione...</item>
        <item>6. No aplica</item>
    </string-array>
    <string-array name="sector_economico2">
        <item>Seleccione...</item>
        <item>6. No aplica</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="label_fecha"><b>Fecha: </b></string>
    <string name="label_datos_gps"><b>Datos GPS</b></string>
    <string name="text_pregunta1">1. Departamento y Municipio</string>
    <string name="text_pregunta1_1">Departamento</string>
    <string name="text_pregunta1_2">Nombre del municipio o área no municipalizada y código</string>
    <string name="text_pregunta2">2. Clase</string>
    <string name="text_pregunta2_1">Clase</string>
    <string name="text_pregunta2_2">Nombre de la localidad o comuna</string>
    <string name="text_pregunta2_3">Nombre del centro poblado</string>
    <string name="text_pregunta2_4">¿La unidad de cobertura se encuentra al interior de un territorio étnico?</string>
    <string name="text_pregunta2_4_Si">1. Si</string>
    <string name="text_pregunta2_4_No">2. No</string>
    <string name="text_pregunta2_5">Seleccione el territorio étnico</string>
    <string name="text_pregunta2_5_1">1. Resguardo indígena</string>
    <string name="text_pregunta2_5_2">2. Tierras de comunidad negra</string>
    <string name="text_pregunta2_6">Seleccione el resguardo indígena</string>
    <string name="text_pregunta2_7">Seleccione el territorio de la tierra de comunidad negra</string>
    <string name="text_pregunta3">3. Área de coordinacion operativa y área operativa</string>
    <string name="text_pregunta3_1">Área de coordinación operativa</string>
    <string name="text_pregunta3_2">Área Operativa</string>
    <string name="text_pregunta4">4. Unidad de Cobertura</string>
    <string name="text_pregunta4_1">Código de Unidad Cobertura</string>
    <string name="text_pregunta4_2">Código de ACER</string>
    <string name="text_pregunta5">5. Dirección - Novedad.</string>
    <string name="text_pregunta5_1">Nombre del barrio, vereda o corregimiento municial (si aplica)</string>
    <string name="text_pregunta5_2">¿Existe presencia de alguna unidad de observacion en esta unidad de cobertura?</string>
    <string name="text_pregunta5_2_Si">1. Si</string>
    <string name="text_pregunta5_2_No">2. No</string>
    <string name="text_pregunta5_3">Seleccione el tipo de novedad</string>
    <string name="text_pregunta5_3_1">1. Parque</string>
    <string name="text_pregunta5_3_2">2. Zona Verde</string>
    <string name="text_pregunta5_3_3">3. Área Sin Desarrollar</string>
    <string name="text_pregunta5_3_4">4. Uso Residencial</string>
    <string name="text_pregunta5_3_5">5. Uso Institucional</string>
    <string name="text_pregunta5_3_6">6. Orden Público</string>
    <string name="text_pregunta5_3_7">7. Otros Motivos</string>
    <string name="text_pregunta5_4">Observación</string>
    <string name="text_pregunta6">6. Dirección</string>
    <string name="text_pregunta6_1">¿Obtiene dirección de unidad previa?</string>
    <string name="text_pregunta6_2">Seleccione el tipo de dirección: </string>
    <string name="text_pregunta6_3">¿Presenta novedades cartográficas?</string>
    <string name="text_pregunta6_normalizador">Normalizador de Dirección</string>
    <string name="text_pregunta6_1.0">6.1 Normalizador de Dirección</string>
</resources>